# airtable-scrape-scratch

./: .copier-answers.yml  .env.sample  .gitignore  README.md  pyproject.toml  retrieve-data.py
